syntax = "proto3";

package cn.gdrfgdrf.connectComputer.Protobuf.Security;

option java_package = "cn.gdrfgdrf.Protobuf.Security";
option java_outer_classname = "SecurityEnumProto";

enum EncryptAlgorithmEnum {
    RSA = 0;
    AES = 1;
}
